Standup Ira Aldridge example.

--- a/content/about/index.mdx
+++ b/content/about/index.mdx
@@ -36,6 +36,4 @@ Canopy _“makes easy”_ the creation of digital exhibits for libraries, archiv
 
 ## Colophon
 
-Canopy IIIF was originally developed by Mat Jordan and Mark Baggett at The University of Tennessee in support of the Rising From The Ashes Oral History Project. The project name "Canopy" is inspired by the presentation, [A Tree's Strength Is Its Trunk: IIIF as Central Operational Infrastructure](https://www.cni.org/topics/standards/a-trees-strength-is-its-trunk-iiif-as-central-operational-infrastructure), delivered by M.A. Matienzo (formerly Stanford University Libraries) and Esmé Cowles (Princeton University Library) at the CNI Fall 2020 Virtual Membership Meeting.
-
-Canopy IIIF is created using [Next.js 13](https://nextjs.org/), with a [FlexSearch](https://github.com/nextapps-de/flexsearch) index for text search, [IIIF Presentation API 3.0](https://iiif.io/api/presentation/3.0/) delivering resource content, [Radix UI](https://www.radix-ui.com/) and [Stitches](https://stitches.dev/) used throughout for the user interface, and various community modules from [IIIF Commons](https://github.com/IIIF-Commons) and [Samvera](https://samvera.org/) supporting presentation and resource delivery.
+Canopy IIIF was originally developed by Mat Jordan and Mark Baggett at The University of Tennessee in support of the Rising From The Ashes Oral History Project. Canopy IIIF is created using [Next.js 13](https://nextjs.org/), with a [FlexSearch](https://github.com/nextapps-de/flexsearch) index for text search, [IIIF Presentation API 3.0](https://iiif.io/api/presentation/3.0/) delivering resource content, [Radix UI](https://www.radix-ui.com/) and [Stitches](https://stitches.dev/) used throughout for the user interface, and various community modules from [IIIF Commons](https://github.com/IIIF-Commons) and [Samvera](https://samvera.org/) supporting presentation and resource delivery.
