--- a/content/index.mdx
+++ b/content/index.mdx
@@ -1,27 +1,33 @@
 ---
-title: New Project
+title: Home
 showHero: true
 showHighlighted: true
 ---
 
 ## About Canopy
 
-**Canopy IIIF** is a purely [IIIF](https://iiif.io/) sourced site generator using Next.js. Canopy is an experimental application that will standup a browseable and searchable digital collections style site entirely from a [IIIF Collection](https://iiif.io/api/presentation/3.0/#51-collection) and the resources it references.
+This is demo using Ira Aldridge photographs provided by Northwestern University Libraries. The original source for these photographs is from this filtered search result `https://dc.library.northwestern.edu/search?q=ira+aldridge&genre=photographs` at Northwestern University Libraries. These are provided through the Northwestern Digital Collections API and made available to the end-user through the View as IIIF dropdown menu.
 
 <ButtonWrapper>
-  <Button href="/about">Learn More</Button>
   <Button
     href="https://canopy-iiif.github.io/docs/"
     target="_blank"
     variant="surface"
   >
-    Read Docs
+    Homepage on Digital Collections
+  </Button>
+  <Button
+    href="https://canopy-iiif.github.io/docs/"
+    target="_blank"
+    variant="surface"
+  >
+    Canopy IIIF Docs
   </Button>
   <Button
     href="https://github.com/canopy-iiif/canopy-iiif"
     target="_blank"
     variant="surface"
   >
-    View Code
+    View Project Code
   </Button>
 </ButtonWrapper>
